# FeedbackLoop-AI

./: .env.sample  .gitignore  README.md  app.py  ask_weaviate.py  feedback.md  main.py  pyproject.toml  ragflow_pdf_test.py  test_ragflow_pdf_test.py  test_weaviate_pdf_chunks.py
feedback/: __init__.py  analyzer.py  history.py  profile.py  repository.py  routes.py
pipeline/: load_pdf.py  load_url.py  retrieve_answer.py
services/: api.py  auth.py  config.py  db.py  feedback.py  notebook_repositories.py  rag.py  storage.py  vectordb.py
static/: app.js  feedbacks.js  style.css
static/css/: login.css  style.css
static/js/: app.js  connection.js  feedback.js
templates/: base.html  connection.html  feedback.html  feedbacks.html  index.html  login.html
test/: RAG_RRF_Retrieval.ipynb  Test_RAG_RRF_Retrieval.ipynb  Test_URL_chucks.ipynb  Test_rag_ecosystem.ipynb  ask_weaviate.py  rag_ecosystem.ipynb  test_feedback_api.py  test_feedback_profile.py  test_rrf_retrieval.py  test_weaviate_clent.py  weaviate_pdf_chunks.py
