[project]
name = "feedbackloop-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "flask>=3.1.0",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32",
    "weaviate-client>=4.22.0",
]
